--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <hr>
                 <li><a href="#">WORK  </a></li>
                 <hr>
-                <li><a href="https://saltyfishthegreat.github.io/blog">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <hr>
                 <li><a href="#">CONTACT</a></li>
             </ul>
